# dhg-composer

./: .cursorrules  .env.staging  .gitignore  .vercelignore  README.md  backup-config.sh  package-lock.json  package.json  project.yaml  pyproject.toml  restore-config.sh  start-frontend-dhg-baseline.sh  tsconfig.json  turbo.json  vercel.json
.backup/main/: backend.env
.turbo/daemon/: 3aa3c126dd4b46ba-turbo.log.2025-01-22
backend/: .coverage  .cursorrules  .env  .env.development.template  .env.example  .env.production.template  .env.staging.template  .env.template  .gitignore  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.base.txt  requirements.development.txt  requirements.txt
backend/config/templates/: .env.example
backend/migrations/: 001_create_users_table.py
backend/requirements/: requirements.base.txt  requirements.development.light.txt  requirements.development.txt  requirements.production.txt  requirements.staging.txt  requirements.txt
backend/sample_data/: treeinfo.txt
backend/scripts/: verify_backend.sh
backend/services/supabase/: __init__.py  base.py  exceptions.py
backend/services/supabase/mixins/: __init__.py  authentication.py  query.py  storage.py  utility.py
backend/services/supabase/utils/: logging_config.py
backend/src/: run.py
backend/src/app/: main.py
backend/src/app/api/: routes.py
backend/src/app/api/docs/: openapi.py
backend/src/app/api/v1/: auth.py
backend/src/app/core/: app_settings.py  apps.py  auth.py  config.py  dependencies.py  deps.py  env_validator.py  features.py  logger.py  route_validator.py  supabase.py  tenant.py
backend/src/app/core/apps/app1/: config.py
backend/src/app/core/apps/app2/: config.py
backend/src/app/core/base/: service.py
backend/src/app/core/mixins/: base.py  service_mixins.py
backend/src/app/db/: base.py  connection.py  exceptions.py  queries.py
backend/src/app/domains/: README.md
backend/src/app/domains/app1/: mixins.py  routes.py
backend/src/app/domains/app1/services/: product_service.py
backend/src/app/domains/app2/: routes.py
backend/src/app/domains/app2/courses/: models.py
backend/src/app/domains/auth/: routes.py
backend/src/app/domains/dhg_baseline/: routes.py
backend/src/app/domains/dhg_baseline/app1/products/: models.py
backend/src/app/domains/test/: routes.py
backend/src/app/domains/user/: models.py  repository.py  routes.py  schemas.py
backend/src/app/domains/users/: routes.py
backend/src/app/middleware/: app_context.py
backend/src/app/routes/: fast_endpoint.py
backend/src/app/services/: test_service.py
backend/src/app/services/auth/: __init__.py  schemas.py  service.py
backend/src/app/services/supabase/: __init__.py  mixins.py
backend/src/app/services/test/: service.py
backend/src/config/: settings.py
backend/src/core/: logging.py
backend/src/middleware/: rate_limiter.py
backend/src/mixins/: pdf_processor.py
backend/src/services/anthropic/: client.py
backend/src/services/supabase/: client.py
backend/tests/: conftest.py  test_api_endpoints.py  test_basic.py  test_main.py  test_supabase_service.py
backend/tests/api/: test_contracts.py
backend/tests/factories/: base.py  user.py
backend/tests/utils/: generators.py
config/templates/: .env.development.template  .env.production.template  .env.template
docs/: README.md  __init__.py  bacend_frontend_servers.md  backend_frontend_servers.md  environment-management.md  environment-setup.md  getting-started-guide.md  index.md  requirements.md  supabase-auth-guide.md  tsx-files-detailed.md  tsx-guidevver2.md  vercel.md
docs/ai-processing/: AI Processing.textClipping  batch-processing-guide.md  comprehensive-guide-v3.md  cursor-rules.md  evaluate-cursor-rules.sh  evaluating-cursor-rules.md  prompt-engineering-guide.md  using_cursor_composer.md  using_cursor_to_setup.md
docs/api/: README.md
docs/architecture/: converting_to_monorepo.md  data-flow.md  deployment.md  domains.md  instructions.md  main-application.md  monorepo_vs_multiapp.md  multi-app-guide.md  multi_app_evaluation.md  overview.md  project-structure.md  requirements.md
docs/backend/: project-structure.md
examples/: asyncpg_async.py  asyncpg_pool.py  asyncpg_types.py  sqlalchemy_core_example.py  sqlalchemy_example.py
frontend/: .gitignore  package-lock.json  package.json
scripts/: .gitignore  README.md  __init__.py  backup-config.sh  compare-branches.sh  db-migrate.sh  deploy-prod.sh  deploy.sh  make-scripts-executable.sh  manage-env.sh  merge-branch.sh  new-feature.sh  promote.sh  rebuild_project.sh  reorganize-scripts.sh  restore-config.sh  setup-api-docs.sh  setup-env.sh  setup-test-docs.sh  setup-venv.sh  start-dev.sh  template.sh  tree-project.sh  utils.py  verify-branch.sh  verify-scripts.sh
~/: .zshrc
(+181 files in other folders)
