[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhg-backend"
version = "0.1.0"
description = "Multi-app FastAPI backend"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    # FastAPI and core dependencies
    "fastapi==0.95.2",          # DOWNGRADED - Compatible with pydantic v1
    "pydantic==1.10.12",        # DOWNGRADED - Required by postgrest 0.10.6
    "email-validator==2.1.1",   # Required for pydantic email validation
    "python-dotenv==1.0.0",     # Environment management

    # API and HTTP
    "httpx==0.23.3",           # DOWNGRADED - Required by supabase 1.0.3
    "httpcore==0.16.3",        # DOWNGRADED - Compatible with httpx 0.23.3
    "aiohttp==3.7.4",          # DOWNGRADED - Known to work on M1/M2 Macs
    "uvicorn==0.23.2",         # ASGI server

    # Supabase and dependencies
    "supabase==1.0.3",         # Base version known to work
    "postgrest==0.10.6",       # Compatible with supabase 1.0.3
    "gotrue==1.0.1",           # Compatible with supabase 1.0.3

    # Authentication
    "python-jose[cryptography]==3.3.0",  # JWT handling
    "passlib[bcrypt]==1.7.4",           # Password hashing
    "python-multipart==0.0.20",         # Form data parsing

    # Utilities
    "orjson==3.10.15",        # Fast JSON parsing
    "tenacity==8.2.3",        # Retry logic for API calls
    "structlog==23.2.0",      # Structured logging
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.10.1",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "ruff>=0.1.3",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tests",
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
plugins = [
    "pydantic.mypy"
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["E501"]  # line too long

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["src/app"]
exclude = [
    "tests",
    "docs",
    "examples",
    "*.pyc",
    "**/__pycache__",
] 